[package]
name    = "axum-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1.5", features = [
    "server",
    "transport-sse-server",
    "transport-io",
], git = "https://github.com/apepkuss/mcp-rust-sdk.git", branch = "main" }
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
tokio-util = "0.7.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
futures = "0.3"
rand = { version = "0.9" }
axum = { version = "0.8", features = ["multipart"] }
hyper = { version = "1.1.0", features = ["full"] }
bytes = "1.5.0"
schemars = { version = "0.8", optional = true }
# [dev-dependencies.'cfg(target_arch="linux")'.dependencies]

[dev-dependencies]
tokio-stream = { version = "0.1" }
# tokio-util = { version = "0.7", features = ["io", "codec"] }
# tokio-util = { version = "0.7", features = ["codec"] }


[patch.crates-io]
tokio   = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper   = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
